# HGD

./: .gitignore  .pre-commit-config.yaml  EXAMPLES.md  GETTING_STARTED.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  validate_installation.py
docs/: examples.md  getting-started.md  onboarding-test.md  troubleshooting.md
json/: collapse.json5  minimal_test.json5  quick_test.json5
